vlib/v/checker/tests/generic_fn_decl_err_a.vv
module main

struct Db {}

struct User {}

struct Post {}

fn main() {
	r := Db{}
	u := User{}
	p := Post{}

	r.create(u, p)
}

fn (r Db) create<U>(u U, p P) {
	println('Yo')
}
